Undo Function Malfunctioning with Dyntopo On #65437

Closed
opened 2019-06-03 07:50:51 +02:00 by Cassandra Aponte · 17 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 950/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.07

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-01 22:51, hash: 079c7f918c
Worked: (optional)

Short description of error

I'm getting this exact issue explained here: https://developer.blender.org/T52254

It's marked as resolved and after doing some digging, I can't seem to find anyone else having this problem. Therefore I've been unable to find a fix for it.

I'm using the latest build for 2.8, downloaded from the site. I have the amount of undo steps set to 50 and Global Undo is checked. Not sure if that information makes a difference.

Exact steps for others to reproduce the error

  1. Open Blender. Start a new file or open a previously started one.

  2. Turn on dyntopo.

  3. Make multiple changes/marks on the sculpt.

  4. Hit undo.

  5. All previous progress will reset to the last save (?).

  6. Do anything to the sculpt - touch it with a brush, rotate, hit Undo again, etc. - and progress will re-appear minus the last change. (Though sometimes it really appears to not have done anything.)

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 950/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.07 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-01 22:51, hash: `079c7f918c` Worked: (optional) **Short description of error** I'm getting this exact issue explained here: https://developer.blender.org/T52254 It's marked as resolved and after doing some digging, I can't seem to find anyone else having this problem. Therefore I've been unable to find a fix for it. I'm using the latest build for 2.8, downloaded from the site. I have the amount of undo steps set to 50 and Global Undo is checked. Not sure if that information makes a difference. **Exact steps for others to reproduce the error** 1. Open Blender. Start a new file or open a previously started one. 2. Turn on dyntopo. 3. Make multiple changes/marks on the sculpt. 4. Hit undo. 6. All previous progress will reset to the last save (?). 7. Do anything to the sculpt - touch it with a brush, rotate, hit Undo again, etc. - and progress will re-appear minus the last change. (Though sometimes it really appears to not have done anything.)

Added subscriber: @Haligren

Added subscriber: @Haligren

#65481 was marked as duplicate of this issue

#65481 was marked as duplicate of this issue

#65524 was marked as duplicate of this issue

#65524 was marked as duplicate of this issue
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Added subscribers: @crantisz, @Vyach

Added subscribers: @crantisz, @Vyach

Added subscriber: @StanislavOvcharov

Added subscriber: @StanislavOvcharov

Worked on:
version: 2.80 (sub 71), branch: sculpt-mode-features, commit date: 2019-05-20 22:59, hash: 711d1f7591
version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-29 18:17, hash: fee600f479

Worked on: version: 2.80 (sub 71), branch: sculpt-mode-features, commit date: 2019-05-20 22:59, hash: 711d1f7591 version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-29 18:17, hash: fee600f479

Added subscriber: @TheCharacterhero-4

Added subscriber: @TheCharacterhero-4

This issue was referenced by 365ba6f5a1

This issue was referenced by 365ba6f5a130c6ce2b2e3eed7ae2c07d5ac1adc9

Added subscriber: @brecht

Added subscriber: @brecht

This started with d0fb602, but the real issue is that the sculpt PBVH does not exist after dyntopo undo.

This started with d0fb602, but the real issue is that the sculpt PBVH does not exist after dyntopo undo.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @akky111, @JacquesLucke

Added subscribers: @akky111, @JacquesLucke

Just some additional info though I don't know how helpful it'll be. The mesh only reverts to the point where the Dyntopo feature was lastly turned on from.

Just some additional info though I don't know how helpful it'll be. The mesh only reverts to the point where the Dyntopo feature was lastly turned on from.

Removed subscriber: @Vyach

Removed subscriber: @Vyach

@akky111 it should already be fixed in the latest build.

@akky111 it should already be fixed in the latest build.

Added subscriber: @Mickaa

Added subscriber: @Mickaa
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65437
No description provided.