Fix T65437: sculpt dyntopo undo not showing correct mesh